# ED_Kitaev

./: CMakeLists.txt  input.inp  main.cpp  my_osc.cpp
src/: Hamiltonian.cpp  Hamiltonian.h  Lanczos.h  Lattice.cpp  Lattice.h  Matrix.cpp  Matrix.h  Memusage.cpp  Memusage.h  Parser.cpp  Parser.h  QBasis.cpp  QBasis.h  Vector.h
